--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="stylesheets/skeleton.css">
 </head>
 <body>
+    <div id="loadScreen">
+        
+    </div>
     <div id="game">
         <!-- Game Header -->
         <header>
@@ -25,7 +28,7 @@
         <div>
             <!-- Resources -->
             <div>
-                
+
             </div>
             <!-- Coffee Machine -->
             <div>
